Fix the max-width of login form elements on mobile

--- a/static/css/master.less
+++ b/static/css/master.less
@@ -2701,6 +2701,7 @@ form.olform textarea {
   font-size: 1.0em;
   font-family: "Lucida Grande", "Trebuchet MS", Geneva, Helvetica, Arial, sans-serif;
   padding: 3px;
+  box-sizing: border-box;
 }
 
 form.olform textarea {
